--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./fonts/inter.css">
   <title>Путешествия по России</title>
 </head>
 
 <body>
+  <div class="page">
+    <!-- !--------------header ----------------------->
+    <header class="header">
+      <a href="" class="header__logo">
+        <img class="header__logo-img" src="./images/header-logo.svg" alt="логотип">
+      </a>
+      <ul class="header__lang">
+        <li class="header__lang-item">
+          <a class="header__lang-link header__lang-link_active" href="">Ru</a>
+        </li>
+        <li class="header__lang-item">
+          <a class="header__lang-link" href="">En</a>
+        </li>
+      </ul>
+    </header>
+    <main class="content">
+      <!-- !------------lead ------------------------->
+      
+    </main>
 
+  </div>
 </body>
 
 </html>
