--- a/index.html
+++ b/index.html
@@ -167,8 +167,36 @@
           </div>
         </div>
       </section>
+      <!-- !------------cover------------------------->
+      <section class="cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+        </a>
+      </section>
     </main>
-
+    <!-- !------------footer------------------------->
+    <footer class="footer">
+      <ul class="footer__links">
+        <li class="footer__item">
+          <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+        </li>
+        <li class="footer__item">
+          <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+        </li>
+        <li class="footer__item">
+          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+        </li>
+        <li class="footer__item">
+          <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+        </li>
+        <li class="footer__item">
+          <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
+        </li>
+      </ul>
+      <p class="footer__copyright">&copy;2021. Швецов Александр</p>
+    </footer>
   </div>
 </body>
 
