--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./vendor/normalize.css">
-  <link rel="stylesheet" href="./fonts/inter.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
 
 <body>
   <div class="page">
-    <!-- !--------------header ----------------------->
     <header class="header">
       <a href="" class="header__logo">
         <img class="header__logo-img" src="./images/header-logo.svg" alt="логотип">
@@ -28,14 +25,12 @@
       </ul>
     </header>
     <main class="content">
-      <!-- !------------lead ------------------------->
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="images/lead-polka.jpg" alt="верхняя полка в поезде" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
-      <!-- !------------intro ------------------------->
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -62,7 +57,6 @@
           </li>
         </ul>
       </section>
-      <!-- !------------photo-grid ------------------------->
       <section class="photo-grid">
         <img src="./images/photo-grid-train.jpg" alt="вид из окна поезда" class="photo-grid__item">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="облака" class="photo-grid__item">
@@ -77,7 +71,6 @@
         <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал2" class="photo-grid__item">
         <img src="./images/photo-grid-ergaki.jpg" alt="туман на горах" class="photo-grid__item">
       </section>
-      <!-- !------------places ------------------------->
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
@@ -167,7 +160,6 @@
           </div>
         </div>
       </section>
-      <!-- !------------cover------------------------->
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -176,7 +168,6 @@
         </a>
       </section>
     </main>
-    <!-- !------------footer------------------------->
     <footer class="footer">
       <ul class="footer__links">
         <li class="footer__item">
