--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Путешествия по России</title>
 </head>
 
-<body>
+<body class="root">
   <div class="page">
     <header class="header">
       <a href="" class="header__logo">
@@ -163,15 +163,15 @@
           </div>
         </div>
       </section>
-      <section class="cover">
+      <!-- <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
         </a>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <ul class="footer__links">
         <li class="footer__item">
           <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
@@ -190,7 +190,7 @@
         </li>
       </ul>
       <p class="footer__copyright">&copy;2021. Швецов Александр</p>
-    </footer>
+    </footer> -->
   </div>
 </body>
 
