--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </a>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <ul class="footer__links">
         <li class="footer__item">
           <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
@@ -190,7 +190,7 @@
         </li>
       </ul>
       <p class="footer__copyright">&copy;2021. Швецов Александр</p>
-    </footer> -->
+    </footer>
   </div>
 </body>
 
