появился span внезапно

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="intro__list">
             <li class="intro__item">
-              <strong>Часовых поясов 11</strong>
+              <strong>Часовых поясов <span class="intro__item-span">11</span></strong>
             </li>
             <li class="intro__item">
-              <strong>Объектов природного наследия ЮНЕСКО 12</strong>
+              <strong>Объектов природного наследия ЮНЕСКО <span class="intro__item-span">12</span></strong>
             </li>
             <li class="intro__item">
-              <strong>Объектов культурного наследия ЮНЕСКО 16</strong>
+              <strong>Объектов культурного наследия ЮНЕСКО <span class="intro__item-span">16</span></strong>
             </li>
             <li class="intro__item">
-              <strong>Природных заповедников 105</strong>
+              <strong>Природных заповедников <span class="intro__item-span">105</span></strong>
             </li>
             <li class="intro__item">
-              <strong>Аэропортов 241</strong>
+              <strong>Аэропортов <span class="intro__item-span">241</span></strong>
             </li>
           </ul>
         </div>
