--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Швецов Александр">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
@@ -61,6 +62,7 @@
         </div>
       </section>
       <section class="photo-grid">
+        <h2 class="photo-grid__title"></h2>
         <img src="./images/photo-grid-train.jpg" alt="вид из окна поезда" class="photo-grid__item">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="облака" class="photo-grid__item">
         <img src="./images/photo-grid-tuman.jpg" alt="туманное утро" class="photo-grid__item">
