--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section>
       <section class="photo-grid">
-        <h2 class="photo-grid__title"></h2>
+        <h2 class="photo-grid__title">Картинки</h2>
         <img src="./images/photo-grid-train.jpg" alt="вид из окна поезда" class="photo-grid__item">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="облака" class="photo-grid__item">
         <img src="./images/photo-grid-tuman.jpg" alt="туманное утро" class="photo-grid__item">
@@ -78,7 +78,7 @@
       </section>
       <section class="places">
         <div class="place">
-          <h2 class="place__title">Куршская коса</h2>
+          <h2 class="place__title">Куршская&nbsp;&nbsp; коса</h2>
           <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
@@ -167,7 +167,7 @@
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До Байкала&nbsp; «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
         </a>
