--- a/index.html
+++ b/index.html
@@ -174,23 +174,25 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li class="footer__item">
-          <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
-        </li>
-        <li class="footer__item">
-          <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
-        </li>
-        <li class="footer__item">
-          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
-        </li>
-        <li class="footer__item">
-          <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
-        </li>
-        <li class="footer__item">
-          <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
-        </li>
-      </ul>
+      <nav class="footer__navigation">
+        <ul class="footer__links">
+          <li class="footer__item">
+            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+          </li>
+          <li class="footer__item">
+            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+          </li>
+          <li class="footer__item">
+            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+          </li>
+          <li class="footer__item">
+            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+          </li>
+          <li class="footer__item">
+            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
+          </li>
+        </ul>
+      </nav>
       <p class="footer__copyright">&copy;2021. Швецов Александр</p>
     </footer>
   </div>
