--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="intro__list">
             <li class="intro__item">
-              <strong>Часовых поясов <span class="intro__item-span">11</span></strong>
+              <p class="intro__item-text">Часовых поясов <span class="intro__item-span">11</span></p>
             </li>
             <li class="intro__item">
-              <strong>Объектов природного наследия ЮНЕСКО <span class="intro__item-span">12</span></strong>
+              <p class="intro__item-text">Объектов природного наследия ЮНЕСКО <span class="intro__item-span">12</span></p>
             </li>
             <li class="intro__item">
-              <strong>Объектов культурного наследия ЮНЕСКО <span class="intro__item-span">16</span></strong>
+              <p class="intro__item-text">Объектов культурного наследия ЮНЕСКО <span class="intro__item-span">16</span></p>
             </li>
             <li class="intro__item">
-              <strong>Природных заповедников <span class="intro__item-span">105</span></strong>
+              <p class="intro__item-text">Природных заповедников <span class="intro__item-span">105</span></p>
             </li>
             <li class="intro__item">
-              <strong>Аэропортов <span class="intro__item-span">241</span></strong>
+              <p class="intro__item-text">Аэропортов <span class="intro__item-span">241</span></p>
             </li>
           </ul>
         </div>
