правки по первому ревью №2

--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
               <p class="intro__item-text">Часовых поясов <span class="intro__item-span">11</span></p>
             </li>
             <li class="intro__item">
-              <p class="intro__item-text">Объектов природного наследия ЮНЕСКО <span class="intro__item-span">12</span></p>
+              <p class="intro__item-text">Объектов природного наследия ЮНЕСКО <span class="intro__item-span">12</span>
+              </p>
             </li>
             <li class="intro__item">
-              <p class="intro__item-text">Объектов культурного наследия ЮНЕСКО <span class="intro__item-span">16</span></p>
+              <p class="intro__item-text">Объектов культурного наследия ЮНЕСКО <span class="intro__item-span">16</span>
+              </p>
             </li>
             <li class="intro__item">
               <p class="intro__item-text">Природных заповедников <span class="intro__item-span">105</span></p>
@@ -78,7 +80,7 @@
       </section>
       <section class="places">
         <div class="place">
-          <h2 class="place__title">Куршская&nbsp;&nbsp; коса</h2>
+          <h2 class="place__title">Куршская коса</h2>
           <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
